# mbd-weather-wardrobe

./: README.md
Capture_picture/: capture.c~  readme.md~
apriltag-galileo/: Makefile~  readme.md
apriltag_detector/: CMakeCache.txt  CMakeLists.txt  Makefile  apriltag_detector.cpp  apriltag_detector.h  capture.c  cmake_install.cmake
apriltag_detector/apriltags/: Makefile  Makefile~  apriltag_demo.c  apriltag_demo2  apriltag_demo2.c  apriltag_demo2.c~  readme.md  readme.md~
hwebcam048/: Changelog  Makefile  Makefile~  README  STREAMING-HOWTO  audio.c  audio.h  common.c  common.h  huffman_tables.h  hwebcam  hwebcam.c  jpeg.c  jpeg.h  video.c  video.h  x86.c  x86.h
mbd_fuzzy_prediction/: CMakeLists.txt  fuzzy_weather_prediction.cpp  fuzzy_weather_prediction.h  main.cpp  parse_weather_data.cpp  parse_weather_data.h
mbd_get_weather_data/: CMakeLists.txt  main.cpp
netpbm/.svn/: all-wcprops  dir-prop-base  entries
netpbm/analyzer/.svn/: all-wcprops  dir-prop-base  entries
netpbm/buildtools/.svn/: all-wcprops  dir-prop-base  entries
netpbm/converter/.svn/: all-wcprops  entries
netpbm/converter/other/.svn/: all-wcprops  dir-prop-base  entries
netpbm/converter/pbm/.svn/: all-wcprops  dir-prop-base  entries
netpbm/converter/pgm/.svn/: all-wcprops  dir-prop-base  entries
netpbm/converter/ppm/.svn/: all-wcprops  dir-prop-base  entries
netpbm/doc/.svn/: all-wcprops  entries
netpbm/editor/.svn/: all-wcprops  dir-prop-base  entries
netpbm/generator/.svn/: all-wcprops  dir-prop-base  entries
netpbm/lib/.svn/: all-wcprops  dir-prop-base  entries
netpbm/other/.svn/: all-wcprops  dir-prop-base  entries
netpbm/urt/.svn/: all-wcprops  entries
netpbm/vms/.svn/: all-wcprops  entries
server_applications/mbd_controller_server/: clothes_representation.h  main.cpp  mbd_controller_server.pro  wwcontrollerwindow.cpp  wwcontrollerwindow.h  wwcontrollerwindow.ui
server_applications/mbd_get_weather_data/: CMakeLists.txt
(+73 files in other folders)
